# autotrait

./: Cargo.toml  Justfile
autotrait/: CHANGELOG.md  Cargo.toml  README.md
autotrait-sample/: Cargo.toml
autotrait-sample/src/: main.rs
autotrait/src/: lib.rs
